*SVN*

* Allow variables to be set via the cli using the -s switch

* Log checkouts to a "revisions.log" file

* Changed behavior of checkout to use the timestamp as the release name, instead of the revision number

* Added CVS module (very very experimental!)

* Works with public keys now, for passwordless deployment

* Subversion module recognizes the password prompt for HTTP authentication

* Preserve +x on scripts when using darcs #1929 [Scott Barron]

* When executing multiline commands, use a backslash to escape the newline